# parley

./: .env.example  .gitignore  JOIN.md  LICENSE  README.md  conftest.py  pyproject.toml  scenario.yaml
examples/: 01_data_collaboration.yaml  02_code_review.yaml  03_productivity_coaching.yaml  04_clinical_cohorts.yaml
fixtures/: forced_counter.json  forced_decline.json  poison_injection.json  poison_raw_export.json
parley/: __init__.py  capabilities.py  cleanroom.py  config.py  dp.py  envelope.py  memory.py  ml.py  policy.py  provenance.py  providers.py  scanners.py  scenario.py  session.py  state.py  verify.py
proof/: bundle-coach-3.json  bundle-cohort-rx-7.json  bundle-review-7.json  cleanroom.json  cross-vendor-decision.json  cross-vendor-groq.json  dp-composition.json  example-coach-3-fullrun.json  example-code-fullrun.json  example-data-fullrun.json  human-gate-proof.json  live-proof.json  purpose-violation.json  rdp-composition.json  spike-cross-org.json  spike-injection.json  spike-memory.json  spike-vault-counter.json
scripts/: capture_transcript.py  demo.sh  drive_vault_spike.py  gen_web_data.py  record_run.py  run_cross_vendor_demo.py  run_demo.py  run_example_spike.py  run_governed_demo.py  run_org.py  smoke_connectivity.py  spike_cross_org.py  spike_injection.py  spike_memory.py  tamper_test.py
tests/: test_capabilities.py  test_cleanroom.py  test_dp.py  test_emit_consent.py  test_examples.py  test_export_gate.py  test_guard.py  test_memory.py  test_offline_e2e.py  test_provenance_policy.py  test_providers.py  test_pydantic_tools.py  test_scenario.py  (+3 more)
(+34 files in other folders)
